@@ -1,2 +1,8 @@
 # tradinggui
 Gui for high frequency trading. Integrates olgasson/algocore logic.
+#Configuration
+1. Download JavaFX SDX from the web (https://gluonhq.com/products/javafx/)
+2. Add the JavaFX SDX libraries to the project's "External Libraries"
+3. Set Run Configuration VM Options to: "--module-path /path/to/javafx/sdk --add-modules javafx.controls,javafx.fxml". Replace "/path/to/javafx/sdk" with the location you stored the JavaFX SDK libraries 
+
+Online description can be found on https://www.jetbrains.com/help/idea/javafx.html
